<resources>
    <string name="app_name">Soccer News</string>
    <string name="title_news">News</string>
    <string name="title_favorites">Favorites</string>
    <string name="textview">TextView</string>
    <string name="txt_open_link">Open Link</string>
    <string name="id_news_image">News Image</string>
    <string name="cd_favorite_icon">Favorite Icon</string>
    <string name="cd_share_icon">Share Icon</string>
    <string name="ic_share_icon">Share icon</string>
    <string name="error_network">Network error.</string>
</resources>