<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivThumbnail"
            android:layout_width="0dp"
            android:layout_height="194dp"
            android:layout_marginTop="@dimen/default_margin"
            android:contentDescription="@string/id_news_image"
            android:src="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/ivTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@string/textview"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivThumbnail" />

        <TextView
            android:id="@+id/ivDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivTitle" />

        <Button
            android:id="@+id/btOpenLink"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/txt_open_link"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivDescription" />

        <ImageView
            android:id="@+id/ivFavorite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:clickable="true"
            android:contentDescription="@string/cd_favorite_icon"
            android:focusable="true"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/btOpenLink"
            app:layout_constraintEnd_toStartOf="@+id/ivShare"
            app:layout_constraintTop_toTopOf="@+id/btOpenLink"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/ic_favorites" />

        <ImageView
            android:id="@+id/ivShare"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:clickable="true"
            android:contentDescription="@string/ic_share_icon"
            android:focusable="true"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/btOpenLink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btOpenLink"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            app:srcCompat="@android:drawable/ic_menu_share" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>